feat: add Tailwind CSS integration and update BaseLayout for improved page title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import heroImg from '../assets/HeroImage.png';
 import MainProducts from '../components/sections/MainProducts.astro';
 import Contact from '../components/Contact.astro';
 ---
-<BaseLayout>
+<BaseLayout pageTitle="Savant Nexus">
 
     <div class="m-2 mb-0 py-8 px-3 h-[720px] rounded-4xl flex flex-col justify-end items-center gap-6 text-center relative overflow-hidden md:p-8 md:py-32 md:items-start md:text-left md:gap-16 md:m-6">
       <div class="flex flex-col gap-6 items-center md:gap-8 md:items-start">
