--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,11 +3,17 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 const { pageTitle } = Astro.props;
+const base = import.meta.env.BASE_URL;
+const path = (caminho: string) => {
+  const cleanBase = base.replace(/\/$/, ''); // Remove barra final da base se houver
+  const cleanCaminho = caminho.replace(/^\//, ''); // Remove barra inicial do caminho
+  return `${cleanBase}/${cleanCaminho}`;
+};
 ---
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={path("/favicon.svg")} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
